--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,11 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
 .App-header {
   background-color: #222;
-  height: 150px;
+  height: 80px;
   padding: 20px;
+  margin-bottom: 20px;
   color: white;
 }
 
@@ -22,7 +18,6 @@
   font-size: large;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.row {
+  padding: 5px;
 }
